# tugas_kuliah

./: README.md
Soal Tugas 3/data/train/: abcd.csv
install/: local_setup.sh  setup.sh
install/raspimouse_description/share/raspimouse_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/raspimouse_ros2_examples/share/raspimouse_ros2_examples/: package.bash  package.zsh
install/raspimouse_tugas/lib/raspimouse_tugas/: teleop
install/raspimouse_tugas/share/raspimouse_tugas/: odom.rviz  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlebot3_act_interfaces/share/turtlebot3_act_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3_action/lib/turtlebot3_action/: turtlebot3_patrol_client  turtlebot3_patrol_server
log/: latest_build
src/raspimouse_tugas/: package.xml  setup.cfg  setup.py
src/raspimouse_tugas/launch/: tugas.launch.py
src/raspimouse_tugas/rviz/: odom.rviz
src/turtlebot3_act_interfaces/: CMakeLists.txt
src/turtlebot3_action/: setup.cfg  setup.py
src/turtlebot3_actionserver/: package.xml  setup.cfg  setup.py
src/turtlebot3_infiniteloop/: package.xml  setup.cfg  setup.py
src/turtlebot3_infiniteloop/turtlebot3_infiniteloop/: force_stop.py
src/turtlesim_polygon/: package.xml  setup.cfg  setup.py
src/turtlesim_polygon/turtlesim_polygon/: client.py
(+270 files in other folders)
