<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspimouse_tugas</name>
  <version>1.0.0</version>
  <description>Package untuk launch keyboard teleoperation dan juga Rviz</description>
  <maintainer email="shinatanaraa38@gmail.com">yonathanarya</maintainer>
  <license>TODO: License declaration</license>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
